Firefox & LibreOffice errata Update